--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "biscolab/laravel-recaptcha": "^6.0.0",
         "darkaonline/l5-swagger": "^8.4",
         "doctrine/dbal": "^3.4",
+        "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.7.2",
         "laravel/framework": "^10.0",
